--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -44,6 +44,15 @@ tasks:
     cmds:
       - rm -rf "${TMPDIR:-/tmp/}devpod-cache"
 
+  cli:build:grpc:
+    desc: build devpod gRPC code
+    dir: pkg/agent/tunnel
+    cmd: |
+      # sudo apt install protobuf-compiler
+      go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
+      go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+      protoc -I . tunnel.proto --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative
+
   cli:test:
     desc: run devpod unit tests
     cmd: go test $(go list ./... | grep -v -e /test -e /e2e) -race -coverprofile=dist/profile.out -covermode=atomic
