ci: require secret for build label
This allows contributors (e.g., non-collaborators) to run tests without failing due to requiring private token

Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -142,7 +142,7 @@ jobs:
             runner: ubuntu-latest
             free-disk-space: true
             install-kind: true
-            requires-secret: false
+            requires-secret: true
 
           - label: up && workspace
             runner: ubuntu-latest
