--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,8 @@ jobs:
           distribution: goreleaser
           version: "~> v2"
           args: build --id devpod-${{ steps.os.outputs.runner_os }} --snapshot
+        env:
+          DEVPOD_CLI_VERSION: ${{ inputs.tag || github.ref_name }}
 
       - uses: actions/upload-artifact@v6
         with:
