--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -333,6 +333,26 @@ jobs:
 
           kind create cluster --name "${{ steps.uuid.outputs.result }}" --image kindest/node:v1.34.0@sha256:7416a61b42b1662ca6ca89f02028ac133a309a2a30ba309614e8ec94d976dc5a
 
+      - name: verify podman setup (Windows)
+        if: matrix.install-kind == true && runner.os == 'Windows' && (matrix.requires-secret == false || needs.can-read-secret.outputs.secret-set == 'true')
+        shell: bash
+        run: |
+          echo "=== Podman version ==="
+          podman --version
+          echo "=== Podman machine status ==="
+          podman machine list
+          echo "=== DOCKER_HOST ==="
+          echo "$DOCKER_HOST"
+          echo "=== Which podman ==="
+          which podman
+          echo "=== Podman executable permissions ==="
+          ls -la "$(which podman)" || echo "Could not find podman"
+          ls -la "$(which podman.exe)" || echo "Could not find podman.exe"
+          echo "=== Test simple podman command ==="
+          podman ps || echo "podman ps failed with exit code $?"
+          echo "=== PATH ==="
+          echo "$PATH"
+
       # NOTE: engineerd/setup-kind does not work on Windows runners
       - name: setup kind
         if: matrix.install-kind == true && runner.os != 'Windows' && (matrix.requires-secret == false || needs.can-read-secret.outputs.secret-set == 'true')
