--- a/.github/workflows/workflow-approval.yml
+++ b/.github/workflows/workflow-approval.yml
@@ -2,10 +2,12 @@ name: Automatic Approve Workflow
 
 on:
   workflow_dispatch:
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
   automatic-approve:
-    name: Automatic Approve Workflow
+    name: Approve Workflows
     runs-on: ubuntu-latest
     steps:
       - uses: mheap/automatic-approve-action@v1
