--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,4 +54,4 @@ repos:
       - id: go-fmt
       - id: go-imports
       - id: golangci-lint
-        pass_filenames: false
+        args: [--new]
