--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,10 +24,11 @@ jobs:
         uses: golangci/golangci-lint-action@v9
         with:
           version: latest
+          only-new-issues: true
 
       - name: megalinter
         uses: oxsecurity/megalinter@v9
         if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          VALIDATE_ALL_CODEBASE: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') }}
+          VALIDATE_ALL_CODEBASE: false
