fix: update golangci-lint args to use --new-from-rev=HEAD
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,4 +54,4 @@ repos:
       - id: go-fmt
       - id: go-imports
       - id: golangci-lint
-        args: [--new]
+        args: [--new-from-rev=HEAD]
