fix: disallow unused params
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -7,6 +7,8 @@ linters:
     - cyclop
     - revive
     - modernize
+    - unparam
+    - unused
   settings:
     cyclop:
       max-complexity: 7
