--- a/desktop/flatpak/sh.loft.devpod.yml
+++ b/desktop/flatpak/sh.loft.devpod.yml
@@ -39,7 +39,7 @@ modules:
     build-commands:
       - ar -x *.deb
       - tar -xf data.tar.gz
-      - install -Dm755 usr/bin/devpod-cli /app/bin/devpod-cli
+      - install -Dm755 usr/bin/devpod /app/bin/devpod
       - install -Dm755 "usr/bin/DevPod Desktop" /app/bin/sh.loft.devpod
       - install -Dm644 DevPod.desktop /app/share/applications/sh.loft.devpod.desktop
       - desktop-file-edit --set-key Exec --set-value sh.loft.devpod /app/share/applications/sh.loft.devpod.desktop
