fix(flatpak): grant xdg-run permissions to podman
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/desktop/flatpak/sh.loft.devpod.yml
+++ b/desktop/flatpak/sh.loft.devpod.yml
@@ -18,6 +18,7 @@ finish-args:
   - --talk-name=org.freedesktop.Notifications
   - --talk-name=org.kde.StatusNotifierWatcher
   - --filesystem=xdg-run/keyring
+  - --filesystem=xdg-run/podman
 
 modules:
   - shared-modules/libayatana-appindicator/libayatana-appindicator-gtk3.json
