refactor(sshtunnel): update ExecuteCommand to use options struct
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -32,3 +32,5 @@ linters:
       rules:
         - name: argument-limit
           arguments: [4]
+        - name: function-result-limit
+          arguments: [3]
