ci: grant write permissions to auto approval workflow
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.github/workflows/workflow-approval.yml
+++ b/.github/workflows/workflow-approval.yml
@@ -9,6 +9,8 @@ jobs:
   automatic-approve:
     name: Approve Workflows
     runs-on: ubuntu-latest
+    permissions:
+      actions: write
     steps:
       - uses: mheap/automatic-approve-action@v1
         with:
