style: limit file length
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -34,3 +34,6 @@ linters:
           arguments: [4]
         - name: function-result-limit
           arguments: [3]
+        - name: file-length-limit
+          arguments:
+            - max: 850
